packages/genesys-spark/src/style/_mixins.scss
@mixin gux-hide-offscreen {
  position: absolute;
  top: auto;
  left: -10000px;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

@mixin gux-unhide-offscreen {
  position: inherit;
  top: inherit;
  left: inherit;
  width: inherit;
  height: inherit;
  overflow: inherit;
}

@mixin gux-disabled-pointer {
  pointer-events: none;
  cursor: default;
}

@mixin gux-sr-only {
  @include gux-hide-offscreen;
}

@mixin gux-sr-only-clip {
  &:not(:focus):not(:active) {
    position: absolute;
    width: 1px;
    height: 1px;
    overflow: hidden;
    white-space: nowrap;
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
  }
}

@mixin gux-menu-container {
  margin: 0;
  overflow-y: auto;
  background: var(--gse-ui-menu-backgroundColor);
  border-color: var(--gse-ui-menu-border-color);
  border-style: var(--gse-ui-menu-border-style);
  border-width: var(--gse-ui-menu-border-width);
  border-radius: var(--gse-ui-menu-borderRadius);
  box-shadow: var(--gse-ui-menu-boxShadow);
}

@mixin gux-empty-button {
  padding: 0;
  margin: 0;
  color: inherit;
  background: none;
  border: none;
}

